<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imgvlogo"
            android:background="@android:drawable/ic_menu_report_image"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shopname"
            android:id="@+id/tvshopname"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imgvlogo"
            android:layout_toEndOf="@+id/imgvlogo" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/itemname"
            android:id="@+id/tvitemname"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/quantity"
            android:id="@+id/tvitquantity"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="40dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Total"
            android:id="@+id/tvitotal"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"
            />


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

         </ListView>
        
        </LinearLayout>
</LinearLayout>