<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/productspin"
        android:padding="5dp"
        android:id="@+id/textView"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:background="@color/repotblue"
        android:layout_gravity="center_horizontal" />
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp">
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinitemlist"
        android:layout_weight="3"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" />
    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinquantity"
        android:entries="@array/itemquantity"
       android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/addtocart"
        android:id="@+id/btnadditem"
        android:layout_weight="2"
        android:background="@color/repotblue"
        />


    </LinearLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shoppncartlist"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"

        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/shop"
            android:layout_margin="10dp"
            android:id="@+id/btnshop"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/repotblue"
            android:layout_alignLeft="@+id/shoppncartlist"
            android:layout_alignStart="@+id/shoppncartlist" />

    </RelativeLayout>






</LinearLayout>